cont-stack-parked: history (spin: statePara 1.15x), spec (stage A's table, D3 landed with its numbers), changelog; backlog jmh-lane-lock-per-checkout